--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@media screen (min-width: 320px) and (max-width: 375px) {
+@media (min-width: 320px) and (max-width: 375px) {
   .about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
@@ -8,9 +8,15 @@
     color: #0c0c0c;
   }
 
+  .pwelcome .about {
+  }
+  ul {
+    list-style: none;
+  }
+
   .us-div {
     border-radius: 30px;
-    width: 335px;
+    width: 100%;
     height: 446px;
     background: #f3f3f3;
   }
@@ -20,5 +26,15 @@
     height: 48px;
     border-radius: 16px;
     background: #3350e9;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.3;
+    text-align: center;
+    color: #fbfbfb;
+  }
+  .three {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
