--- a/css/styles.css
+++ b/css/styles.css
@@ -6,19 +6,34 @@
     line-height: 1;
     letter-spacing: -0.02em;
     color: #0c0c0c;
+    padding-top: 40px;
+    padding-left: 20px;
+    gap: 28px;
+  }
+  background-image {
+    background-image: url(/proekt-16/mobi/Rectangle\(1x\)mobi.png);
+  }
+  ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .ul-pwel {
   }
 
-  .pwelcome .about {
-  }
-  ul {
-    list-style: none;
+  .pwelcome {
   }
 
   .us-div {
     border-radius: 30px;
     width: 100%;
-    height: 446px;
+
     background: #f3f3f3;
+    padding-bottom: 20px;
+  }
+
+  .foto-cloc {
+    padding-top: 20px;
   }
 
   .catalog {
@@ -33,8 +48,193 @@
     text-align: center;
     color: #fbfbfb;
   }
-  .three {
+
+  .button {
+    padding-left: 20px;
+  }
+
+  .three . {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
+
+@media (max-width: 768px) {
+  .about {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+  }
+  background-image {
+    background-image: url(/proekt-16/tab/Rectangle\(1\)x-tab.png);
+  }
+  ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .ul-pwel {
+    padding: 0;
+  }
+
+  .pwelcome {
+  }
+
+  .us-div {
+    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    background: #f3f3f3;
+  }
+
+  .foto-cloc {
+    padding-top: 40px;
+  }
+
+  .catalog {
+    cursor: pointer;
+    width: 160px;
+    height: 48px;
+    border-radius: 16px;
+    background: #3350e9;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.3;
+    text-align: center;
+    color: #fbfbfb;
+    margin-left: 80px;
+    margin-bottom: 60px;
+  }
+
+  .three {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 20px;
+  }
+
+  .exere {
+    padding: 60px 80px;
+  }
+  .catalog:hover {
+    background: #1f3cd4;
+  }
+  .catalog:first {
+    background: #1f3cd4;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .about {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    margin-bottom: 40px;
+  }
+  background-image {
+    background-image: url(/proekt-16/desc/Rectangle\(1\)x-desc.png);
+  }
+
+  ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .ul-pwel {
+    padding: 0;
+  }
+
+  .pwelcome {
+  }
+
+  .casio {
+  }
+
+  .us-div {
+    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    background: #f3f3f3;
+  }
+
+  .foto-cloc {
+  }
+
+  .catalog:hover {
+    background: #1f3cd4;
+  }
+  .catalog:first {
+    background: #1f3cd4;
+  }
+
+  .catalog {
+    cursor: pointer;
+    width: 160px;
+    height: 48px;
+    border-radius: 16px;
+    background: #3350e9;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.3;
+    text-align: center;
+    color: #fbfbfb;
+    margin-left: 60px;
+    margin-bottom: 80px;
+  }
+
+  .three .section {
+    padding-left: 65px;
+    padding-right: 65px;
+    padding-bottom: 20px;
+    gap: 40px;
+    display: flex;
+  }
+
+  .exere {
+    padding: 60px 60px 40px 60px;
+  }
+  .conteiner {
+    display: flex;
+    gap: 40px;
+    padding-left: 65px;
+    padding-right: 65px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<source srcset="/proekt-16/mobi/Rectangle(1x)mobi.png 1x, /proekt-16/mobi/Rectangle(2x)mobi.png 2x"
+    media="(min-device-pixel-ratio: 1) (min-width: 320px) and (max-width: 375px)">
+<img src="/proekt-16/mobi/Rectangle(1x)mobi.png" alt="cloc">
+
+<source srcset="/proekt-16/tab/Rectangle(1)x-tab.png 1x, /proekt-16/tab/Rectangle(1)x-tab.png 1x 2x"
+    media="(min-device-pixel-ratio: 1) (max-width: 768px)">
+<img src="/proekt-16/tab/Rectangle(1)x-tab.png" alt="cloc">
+
+<source srcset="/proekt-16/desc/Rectangle(1)x-desc.png 1x, /proekt-16/desc/Rectangle(2)x-desc.png 2x"
+    media="(min-device-pixel-ratio: 2) (max-width: 1280px)">
+<img src="/proekt-16/desc/Rectangle(1)x-desc.png" alt="cloc">
