--- a/css/styles.css
+++ b/css/styles.css
@@ -6,37 +6,52 @@
     line-height: 1;
     letter-spacing: -0.02em;
     color: #0c0c0c;
-    padding-top: 40px;
-    padding-left: 20px;
     gap: 28px;
   }
-  background-image {
-    background-image: url(/proekt-16/mobi/Rectangle\(1x\)mobi.png);
+  /* .foto-cloc {
+    background-image: url('/proekt-16/mobi/Rectangle\(1x\)mobi.png');
+    width: 335px;
+    height: 446px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  } */
   }
+  img {
+    display: block;
+    /* max-width: 100%;
+    height: auto; */
+    width: 335px;
+    height: 446px;
+}
+  
+  .exere {
+    padding: 40px 20px;
+  }
+
+  /* @media screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 320px) (min-resolution: 2dppx) {
+    .foto-cloc {
+      background-image: url("/proekt-16/mobi/Rectangle\(2x\)mobi.png");
+      background-size: cover;
+    } */
+
   ul li {
     list-style: none;
     padding: 0;
     margin: 0;
   }
-  .ul-pwel {
-  }
-
-  .pwelcome {
-  }
 
   .us-div {
     border-radius: 30px;
     width: 100%;
-
     background: #f3f3f3;
     padding-bottom: 20px;
-  }
-
-  .foto-cloc {
-    padding-top: 20px;
+    margin-bottom: 20px;
   }
 
   .catalog {
+    display: inline-block;
     width: 160px;
     height: 48px;
     border-radius: 16px;
@@ -47,19 +62,32 @@
     line-height: 1.3;
     text-align: center;
     color: #fbfbfb;
+    margin-left: 20px;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .vcnop {
+    color: #fbfbfb;
+    text-decoration: none;
   }
 
   .button {
     padding-left: 20px;
   }
 
-  .three . {
+  .three {
     padding-left: 20px;
     padding-right: 20px;
   }
+  .ul-pwel {
+    padding: 0;
+  }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px) {
   .about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
@@ -68,9 +96,31 @@
     letter-spacing: -0.02em;
     color: #0c0c0c;
   }
-  background-image {
-    background-image: url(/proekt-16/tab/Rectangle\(1\)x-tab.png);
-  }
+  /* .foto-cloc {
+    background-image: url('/proekt-16/tab/Rectangle\(1\)x-tab.png');
+    width: 704px;
+    height: 512px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  } */
+  img {
+    display: block;
+    /* max-width: 100%;
+    height: auto; */
+    width: 704px;
+    height: 512px;
+}
+
+  /* @media screen and (-webkit-min-device-pixel-ratio: 1),
+  (min-resolution: 320px),
+  (min-resolution: 2dppx) {
+  .foto-cloc {
+    background-image:
+      url("/proekt-16/tab/Rectangle\(1\)x-tab.png");
+    background-size: cover;
+  } */
+
   ul li {
     list-style: none;
     padding: 0;
@@ -79,19 +129,12 @@
   .ul-pwel {
     padding: 0;
   }
-
-  .pwelcome {
-  }
-
   .us-div {
     border-radius: 30px;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background: #f3f3f3;
-  }
-
-  .foto-cloc {
-    padding-top: 40px;
+    margin-bottom: 40px;
   }
 
   .catalog {
@@ -108,6 +151,14 @@
     color: #fbfbfb;
     margin-left: 80px;
     margin-bottom: 60px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .vcnop {
+    color: #fbfbfb;
+    text-decoration: none;
   }
 
   .three {
@@ -127,7 +178,7 @@
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media (min-width: 768px) and (max-width: 1280px) {
   .about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
@@ -137,9 +188,23 @@
     color: #0c0c0c;
     margin-bottom: 40px;
   }
-  background-image {
-    background-image: url(/proekt-16/desc/Rectangle\(1\)x-desc.png);
+  /* .foto-cloc {
+    background-image: url('/proekt-16/desc/Rectangle\(1\)x-desc.png');
+    width: 530px;
+    height: 532px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
+   */
+    img {
+    display: block;
+    /* max-width: 100%;
+    height: auto; */
+    width: 530px;
+    height: 532px;
+}
+
 
   ul li {
     list-style: none;
@@ -150,20 +215,11 @@
     padding: 0;
   }
 
-  .pwelcome {
-  }
-
-  .casio {
-  }
-
   .us-div {
     border-radius: 30px;
     width: 100%;
     height: 100%;
     background: #f3f3f3;
-  }
-
-  .foto-cloc {
   }
 
   .catalog:hover {
@@ -187,6 +243,14 @@
     color: #fbfbfb;
     margin-left: 60px;
     margin-bottom: 80px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .vcnop {
+    color: #fbfbfb;
+    text-decoration: none;
   }
 
   .three .section {
@@ -207,34 +271,3 @@
     padding-right: 65px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<source srcset="/proekt-16/mobi/Rectangle(1x)mobi.png 1x, /proekt-16/mobi/Rectangle(2x)mobi.png 2x"
-    media="(min-device-pixel-ratio: 1) (min-width: 320px) and (max-width: 375px)">
-<img src="/proekt-16/mobi/Rectangle(1x)mobi.png" alt="cloc">
-
-<source srcset="/proekt-16/tab/Rectangle(1)x-tab.png 1x, /proekt-16/tab/Rectangle(1)x-tab.png 1x 2x"
-    media="(min-device-pixel-ratio: 1) (max-width: 768px)">
-<img src="/proekt-16/tab/Rectangle(1)x-tab.png" alt="cloc">
-
-<source srcset="/proekt-16/desc/Rectangle(1)x-desc.png 1x, /proekt-16/desc/Rectangle(2)x-desc.png 2x"
-    media="(min-device-pixel-ratio: 2) (max-width: 1280px)">
-<img src="/proekt-16/desc/Rectangle(1)x-desc.png" alt="cloc">
