--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-@media (min-width: 320px) and (max-width: 375px) {
-  .about {
+.about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
     font-size: 32px;
@@ -9,7 +8,7 @@
     gap: 28px;
   }
 
-  .conteiner {
+  .container {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -22,8 +21,6 @@
 
   .exere {
     padding: 40px 20px;
-    width: 100%;
-    height: 100%;
   }
 
   ul li {
@@ -34,7 +31,168 @@
 
   .us-div {
     border-radius: 30px;
+   max-width: 335px;
+    background: #f3f3f3;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+
+  .catalog {
+    display: inline-block;
+    width: 160px;
+    height: 48px;
+    border-radius: 16px;
+    background: #3350e9;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.3;
+    text-align: center;
+    color: #fbfbfb;
+    margin-left: 20px;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+  }
+
+  .catalog span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .catalog span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .catalog:hover span {
+    padding-right: 25px;
+  }
+
+  .catalog:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  .vcnop {
+    color: #fbfbfb;
+    text-decoration: none;
+  }
+
+  .button {
+    padding-left: 20px;
+  }
+
+  .ul-pwel {
+    padding: 0;
+  }
+
+
+@media only screen and (min-width: 768px) {
+  .about {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+  }
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .cloc-cloc {
+    display: block;
     max-width: 100%;
+    height: auto;
+  }
+
+  ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .ul-pwel {
+    padding: 0;
+  }
+  .us-div {
+    border-radius: 30px;
+    width: 704px;
+    /* width: 100%;
+    height: 100%; */
+    /* width: 594px; */
+    background: #f3f3f3;
+    margin-bottom: 40px;
+  }
+
+  .catalog {
+    cursor: pointer;
+    width: 160px;
+    height: 48px;
+    border-radius: 16px;
+    background: #3350e9;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.3;
+    text-align: center;
+    color: #fbfbfb;
+    margin-left: 80px;
+    margin-bottom: 60px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+  }
+
+
+@media only screen and (min-width: 375px) {
+  .about {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    gap: 28px;
+  }
+
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .cloc-cloc {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .exere {
+    padding: 40px 20px;
+  width: 100%;
+  max-width: 100%;
+  }
+
+  ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .us-div {
+    border-radius: 30px;
+    width: 704px;
+    height: 446px;
     background: #f3f3f3;
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -99,7 +257,7 @@
   }
 }
 
-@media (min-width: 375px) and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
@@ -108,7 +266,7 @@
     letter-spacing: -0.02em;
     color: #0c0c0c;
   }
-  .conteiner {
+  .container {
     padding-left: 32px;
     padding-right: 32px;
   }
@@ -129,8 +287,9 @@
   }
   .us-div {
     border-radius: 30px;
-    /* width: 100%;
+    max-width: 704px;
     height: 100%; */
+    /* width: 594px; */
     background: #f3f3f3;
     margin-bottom: 40px;
   }
@@ -147,11 +306,36 @@
     line-height: 1.3;
     text-align: center;
     color: #fbfbfb;
-    margin-left: 80px;
-    margin-bottom: 60px;
+    margin-left: 60px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s;
+    margin-left: 80px;
+  }
+  .catalog span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .catalog span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .catalog:hover span {
+    padding-right: 25px;
+  }
+
+  .catalog:hover span:after {
+    opacity: 1;
+    right: 0;
   }
 
   .vcnop {
@@ -160,8 +344,8 @@
   }
   .exere {
     padding: 60px 80px;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
   }
   .catalog:hover {
     background: #1f3cd4;
@@ -171,7 +355,7 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media only screen and (min-width: 1280px) {
   .about {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
@@ -202,9 +386,9 @@
 
   .us-div {
     border-radius: 30px;
-    width: 100%;
-    height: 100%;
+    max-width: 580px;
     background: #f3f3f3;
+
   }
 
   .catalog:hover {
@@ -231,6 +415,32 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s;
+  }
+
+  .catalog span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .catalog span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .catalog:hover span {
+    padding-right: 25px;
+  }
+
+  .catalog:hover span:after {
+    opacity: 1;
+    right: 0;
   }
 
   .vcnop {
@@ -249,7 +459,7 @@
   .exere {
     padding: 60px 60px 40px 60px;
   }
-  .conteiner {
+  .container {
     display: flex;
     gap: 40px;
     padding-left: 65px;
